# SERonEmoDB

./: Git_Guide.md  README.md  SSH_Key_Create_Guide.md  Use_Guide_Demo.md  environment.yml  one_click_setup.sh  pyproject.toml  requirements.txt  setup.py
Weekly_Tasks/: Week_2.md
docs/: Git_Guide.md
docs /: Pytest_guide.md
notebooks/: Duc_LatestTraining.ipynb  Week1.ipynb
notebooks/lightning_logs/version_0/: events.out.tfevents.1747656649.khoile-Legion-5-15IAH7H.19420.0  hparams.yaml
notebooks/lightning_logs/version_1/: events.out.tfevents.1747656740.khoile-Legion-5-15IAH7H.19420.1
notebooks/lightning_logs/version_10/: events.out.tfevents.1747698716.khoile-Legion-5-15IAH7H.10796.2
notebooks/lightning_logs/version_11/: events.out.tfevents.1747699026.khoile-Legion-5-15IAH7H.11690.0
notebooks/lightning_logs/version_2/: events.out.tfevents.1747656805.khoile-Legion-5-15IAH7H.19420.2
notebooks/lightning_logs/version_3/: events.out.tfevents.1747656972.khoile-Legion-5-15IAH7H.19851.0
notebooks/lightning_logs/version_4/: events.out.tfevents.1747656996.khoile-Legion-5-15IAH7H.19851.1
notebooks/lightning_logs/version_5/: events.out.tfevents.1747657014.khoile-Legion-5-15IAH7H.19851.2
notebooks/lightning_logs/version_6/: events.out.tfevents.1747657197.khoile-Legion-5-15IAH7H.19851.3
notebooks/lightning_logs/version_7/: events.out.tfevents.1747657253.khoile-Legion-5-15IAH7H.19851.4
src/SERonEmoDB/: __init__.py
src/seronemodb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ingest.py  test_models.py
(+18 files in other folders)
